--- a/javadoc_3.x/org/javers/core/diff/changetype/ValueChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/ValueChange.html
@@ -123,6 +123,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">ValueChange</span>
 extends <a href="../../../../../org/javers/core/diff/changetype/PropertyChange.html" title="class in org.javers.core.diff.changetype">PropertyChange</a></pre>
+<div class="block">Change on a Value property, like int or String</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../serialized-form.html#org.javers.core.diff.changetype.ValueChange">Serialized Form</a></dd>
