--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ContainerElementChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ContainerElementChange.html
@@ -118,6 +118,7 @@ var activeTableTab = "activeTableTab";
 <pre>public abstract class <span class="typeNameLabel">ContainerElementChange</span>
 extends java.lang.Object
 implements java.io.Serializable</pre>
+<div class="block">Any change in an Array or Collection</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ContainerElementChange">Serialized Form</a></dd>
