--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ElementValueChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ElementValueChange.html
@@ -118,6 +118,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">ElementValueChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/container/ContainerElementChange.html" title="class in org.javers.core.diff.changetype.container">ContainerElementChange</a></pre>
+<div class="block">Value changed at certain index in an Array or List</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ElementValueChange">Serialized Form</a></dd>
