--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ValueAddOrRemove.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ValueAddOrRemove.html
@@ -122,7 +122,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public abstract class <span class="typeNameLabel">ValueAddOrRemove</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/container/ContainerElementChange.html" title="class in org.javers.core.diff.changetype.container">ContainerElementChange</a></pre>
-<div class="block">Change on collection of values</div>
+<div class="block">Abstract change in a collection</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ValueAddOrRemove">Serialized Form</a></dd>
