--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ValueAdded.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ValueAdded.html
@@ -123,7 +123,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">ValueAdded</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/container/ValueAddOrRemove.html" title="class in org.javers.core.diff.changetype.container">ValueAddOrRemove</a></pre>
-<div class="block">Item added to a collection</div>
+<div class="block">Item added to an Array or Collection</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ValueAdded">Serialized Form</a></dd>
