--- a/javadoc_3.x/org/javers/core/diff/changetype/container/package-summary.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/package-summary.html
@@ -82,50 +82,62 @@
 <tbody>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ArrayChange.html" title="class in org.javers.core.diff.changetype.container">ArrayChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Changes on an Array property</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/CollectionChange.html" title="class in org.javers.core.diff.changetype.container">CollectionChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Changes on a Collection property</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ContainerChange.html" title="class in org.javers.core.diff.changetype.container">ContainerChange</a></td>
 <td class="colLast">
-<div class="block">Collection or Array change</div>
+<div class="block">Changes on an Array or Collection property</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ContainerElementChange.html" title="class in org.javers.core.diff.changetype.container">ContainerElementChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Any change in an Array or Collection</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ElementValueChange.html" title="class in org.javers.core.diff.changetype.container">ElementValueChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Value changed at certain index in an Array or List</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ListChange.html" title="class in org.javers.core.diff.changetype.container">ListChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Changes on a List property</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/SetChange.html" title="class in org.javers.core.diff.changetype.container">SetChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Changes on a Set property</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ValueAdded.html" title="class in org.javers.core.diff.changetype.container">ValueAdded</a></td>
 <td class="colLast">
-<div class="block">Item added to a collection</div>
+<div class="block">Item added to an Array or Collection</div>
 </td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ValueAddOrRemove.html" title="class in org.javers.core.diff.changetype.container">ValueAddOrRemove</a></td>
 <td class="colLast">
-<div class="block">Change on collection of values</div>
+<div class="block">Abstract change in a collection</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/container/ValueRemoved.html" title="class in org.javers.core.diff.changetype.container">ValueRemoved</a></td>
 <td class="colLast">
-<div class="block">element removed from collection</div>
+<div class="block">Item removed from an Array or Collection</div>
 </td>
 </tr>
 </tbody>
