--- a/javadoc_3.x/org/javers/core/diff/changetype/map/EntryChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/EntryChange.html
@@ -118,6 +118,7 @@ var activeTableTab = "activeTableTab";
 <pre>public abstract class <span class="typeNameLabel">EntryChange</span>
 extends java.lang.Object
 implements java.io.Serializable</pre>
+<div class="block">Any change in a Map</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.map.EntryChange">Serialized Form</a></dd>
