--- a/javadoc_3.x/org/javers/core/diff/changetype/map/package-summary.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/package-summary.html
@@ -82,29 +82,39 @@
 <tbody>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/EntryAdded.html" title="class in org.javers.core.diff.changetype.map">EntryAdded</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Entry added to a Map</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/EntryAddOrRemove.html" title="class in org.javers.core.diff.changetype.map">EntryAddOrRemove</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Entry added or removed from a Map</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/EntryChange.html" title="class in org.javers.core.diff.changetype.map">EntryChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Any change in a Map</div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/EntryRemoved.html" title="class in org.javers.core.diff.changetype.map">EntryRemoved</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Entry removed from a Map</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/EntryValueChange.html" title="class in org.javers.core.diff.changetype.map">EntryValueChange</a></td>
 <td class="colLast">
-<div class="block">entry value changed, when value is a simple type</div>
+<div class="block">Changed value assigned to a key in a Map</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../../org/javers/core/diff/changetype/map/MapChange.html" title="class in org.javers.core.diff.changetype.map">MapChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Changes on a Map property</div>
+</td>
 </tr>
 </tbody>
 </table>
