--- a/javadoc_3.x/org/javers/core/diff/changetype/package-summary.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/package-summary.html
@@ -93,30 +93,32 @@
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/diff/changetype/NewObject.html" title="class in org.javers.core.diff.changetype">NewObject</a></td>
 <td class="colLast">
-<div class="block">new CDO added to graph</div>
+<div class="block">New object added to a graph</div>
 </td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/diff/changetype/ObjectRemoved.html" title="class in org.javers.core.diff.changetype">ObjectRemoved</a></td>
 <td class="colLast">
-<div class="block">primitive or Value Object changed</div>
+<div class="block">Object removed from a graph</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/diff/changetype/PropertyChange.html" title="class in org.javers.core.diff.changetype">PropertyChange</a></td>
 <td class="colLast">
-<div class="block">Property change like <a href="../../../../../org/javers/core/diff/changetype/ValueChange.html" title="class in org.javers.core.diff.changetype"><code>ValueChange</code></a> or <a href="../../../../../org/javers/core/diff/changetype/ReferenceChange.html" title="class in org.javers.core.diff.changetype"><code>ReferenceChange</code></a></div>
+<div class="block">Change on object's property of any type (Value, List, Set, Map, Array or Reference)</div>
 </td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/diff/changetype/ReferenceChange.html" title="class in org.javers.core.diff.changetype">ReferenceChange</a></td>
 <td class="colLast">
-<div class="block">Changed reference to Entity or ValueObject (in *ToOne relation)</div>
+<div class="block">Changed reference to Entity or Value Object</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/diff/changetype/ValueChange.html" title="class in org.javers.core.diff.changetype">ValueChange</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Change on a Value property, like int or String</div>
+</td>
 </tr>
 </tbody>
 </table>
