--- a/javadoc_3.x/org/javers/core/diff/changetype/NewObject.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/NewObject.html
@@ -118,7 +118,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">NewObject</span>
 extends <a href="../../../../../org/javers/core/diff/Change.html" title="class in org.javers.core.diff">Change</a></pre>
-<div class="block">new CDO added to graph</div>
+<div class="block">New object added to a graph</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../serialized-form.html#org.javers.core.diff.changetype.NewObject">Serialized Form</a></dd>
