--- a/javadoc_3.x/org/javers/core/diff/changetype/ObjectRemoved.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/ObjectRemoved.html
@@ -118,7 +118,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">ObjectRemoved</span>
 extends <a href="../../../../../org/javers/core/diff/Change.html" title="class in org.javers.core.diff">Change</a></pre>
-<div class="block">primitive or Value Object changed</div>
+<div class="block">Object removed from a graph</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../serialized-form.html#org.javers.core.diff.changetype.ObjectRemoved">Serialized Form</a></dd>
