--- a/javadoc_3.x/org/javers/core/diff/changetype/PropertyChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/PropertyChange.html
@@ -122,7 +122,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public abstract class <span class="typeNameLabel">PropertyChange</span>
 extends <a href="../../../../../org/javers/core/diff/Change.html" title="class in org.javers.core.diff">Change</a></pre>
-<div class="block">Property change like <a href="../../../../../org/javers/core/diff/changetype/ValueChange.html" title="class in org.javers.core.diff.changetype"><code>ValueChange</code></a> or <a href="../../../../../org/javers/core/diff/changetype/ReferenceChange.html" title="class in org.javers.core.diff.changetype"><code>ReferenceChange</code></a></div>
+<div class="block">Change on object's property of any type (Value, List, Set, Map, Array or Reference)</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../serialized-form.html#org.javers.core.diff.changetype.PropertyChange">Serialized Form</a></dd>
