--- a/javadoc_3.x/org/javers/core/diff/changetype/ReferenceChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/ReferenceChange.html
@@ -123,7 +123,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">ReferenceChange</span>
 extends <a href="../../../../../org/javers/core/diff/changetype/PropertyChange.html" title="class in org.javers.core.diff.changetype">PropertyChange</a></pre>
-<div class="block">Changed reference to Entity or ValueObject (in *ToOne relation)</div>
+<div class="block">Changed reference to Entity or Value Object</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../serialized-form.html#org.javers.core.diff.changetype.ReferenceChange">Serialized Form</a></dd>
