--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ArrayChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ArrayChange.html
@@ -128,6 +128,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">ArrayChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/container/ContainerChange.html" title="class in org.javers.core.diff.changetype.container">ContainerChange</a></pre>
+<div class="block">Changes on an Array property</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ArrayChange">Serialized Form</a></dd>
