--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ContainerChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ContainerChange.html
@@ -127,7 +127,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public abstract class <span class="typeNameLabel">ContainerChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/PropertyChange.html" title="class in org.javers.core.diff.changetype">PropertyChange</a></pre>
-<div class="block">Collection or Array change</div>
+<div class="block">Changes on an Array or Collection property</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ContainerChange">Serialized Form</a></dd>
