--- a/javadoc_3.x/org/javers/core/diff/changetype/container/ListChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/container/ListChange.html
@@ -133,6 +133,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public final class <span class="typeNameLabel">ListChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/container/CollectionChange.html" title="class in org.javers.core.diff.changetype.container">CollectionChange</a></pre>
+<div class="block">Changes on a List property</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.container.ListChange">Serialized Form</a></dd>
