--- a/javadoc_3.x/org/javers/core/diff/changetype/map/EntryAddOrRemove.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/EntryAddOrRemove.html
@@ -122,6 +122,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public abstract class <span class="typeNameLabel">EntryAddOrRemove</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/map/EntryChange.html" title="class in org.javers.core.diff.changetype.map">EntryChange</a></pre>
+<div class="block">Entry added or removed from a Map</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.map.EntryAddOrRemove">Serialized Form</a></dd>
