--- a/javadoc_3.x/org/javers/core/diff/changetype/map/EntryRemoved.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/EntryRemoved.html
@@ -123,6 +123,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">EntryRemoved</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/map/EntryAddOrRemove.html" title="class in org.javers.core.diff.changetype.map">EntryAddOrRemove</a></pre>
+<div class="block">Entry removed from a Map</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.map.EntryRemoved">Serialized Form</a></dd>
