--- a/javadoc_3.x/org/javers/core/diff/changetype/map/EntryValueChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/EntryValueChange.html
@@ -118,7 +118,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">EntryValueChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/map/EntryChange.html" title="class in org.javers.core.diff.changetype.map">EntryChange</a></pre>
-<div class="block">entry value changed, when value is a simple type</div>
+<div class="block">Changed value assigned to a key in a Map</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.map.EntryValueChange">Serialized Form</a></dd>
