--- a/javadoc_3.x/org/javers/core/diff/changetype/map/MapChange.html
+++ b/javadoc_3.x/org/javers/core/diff/changetype/map/MapChange.html
@@ -123,6 +123,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">MapChange</span>
 extends <a href="../../../../../../org/javers/core/diff/changetype/PropertyChange.html" title="class in org.javers.core.diff.changetype">PropertyChange</a></pre>
+<div class="block">Changes on a Map property</div>
 <dl>
 <dt><span class="seeLabel">See Also:</span></dt>
 <dd><a href="../../../../../../serialized-form.html#org.javers.core.diff.changetype.map.MapChange">Serialized Form</a></dd>
