--- a/index.html
+++ b/index.html
@@ -144,20 +144,20 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                     <h2>Download from<br><span>The Central</span></h2>
                 </div>
             </a>
-            <a href="https://gitter.im/javers/javers">
+            <a href="https://gitter.im/javers/contributors">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-comments"></span>
                     </div>
-                    <h2>Chat with us at<br><span>Gitter</span></h2>
+                    <h2>Contributors <br><span>Chat</span></h2>
                 </div>
             </a>
-            <a href="/donate">
+            <a href="/sponsorship">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-money"></span>
                     </div>
-                    <h2>Donate with<br><span>PayPal</span></h2>
+                    <h2>Donate via<br><span>Open Colective</span></h2>
                 </div>
             </a>
         </div>
@@ -188,15 +188,6 @@ description: With JaVers you can forget about troublesome data versioning. Let t
 
 
 
-            </div>
-            <div class="col-md-4">
-                <br/>
-                <a class="twitter-timeline"
-                   href="https://twitter.com/javers_org"
-                   data-widget-id="469928071974232064"
-                   data-tweet-limit="4"
-                   data-link-color="#ea4d1a">Tweety użytkownika @javers_org </a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
     </div>
