SPONSORSHIP, better alert

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: JaVers &mdash; Object auditing and diff framework for Java
 description: With JaVers you can forget about troublesome data versioning. Let the changes in your data be managed by JaVers.
 ---
 
+{% include sponsorship-alert.html %}
+
 <header class="container-fluid hero-container">
     <div class="hero">
         <h1 style="color:#EA4D1A;">Object auditing and diff framework for Java</h1>
