--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                     <div class="icon-container">
                         <span class="icon fa fa-rocket"></span>
                     </div>
-                    <h2>One, two, three, go!</h2>
+                    <h2>Getting Started</h2>
                 </a>
                 <a href="documentation/getting-started/">Quick start</a>
                 and easy <a href="/documentation/domain-configuration">configuration</a>
