--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: main
-title: JaVers &mdash; Object auditing and diff framework for Java
+title: JaVers &mdash; The Leading Framework for Object Audit and Diff in Java
 description: With JaVers you can forget about troublesome data versioning. Let the changes in your data be managed by JaVers.
 ---
 
@@ -8,7 +8,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
 
 <header class="container-fluid hero-container">
     <div class="hero">
-        <h1 style="color:#EA4D1A;">Object auditing and diff framework for Java</h1>
+        <h1 style="color:#EA4D1A;">The Leading Framework for Object Audit and Diff in Java</h1>
 
         <p>With <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
 
