--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                     <h2>Download from<br><span>The Central</span></h2>
                 </div>
             </a>
-            <a href="https://gitter.im/javers/contributors">
+            <a href="https://github.com/javers/javers/discussions">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-comments"></span>
                     </div>
-                    <h2>Contributors <br><span>Chat</span></h2>
+                    <h2>Contributors <br><span>Discussions</span></h2>
                 </div>
             </a>
             <a href="/sponsorship">
