--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                     <div class="icon-container">
                         <span class="icon fa fa-money"></span>
                     </div>
-                    <h2>Donate via<br><span>Open Colective</span></h2>
+                    <h2>Donate via<br><span>GitHub Sponsors</span></h2>
                 </div>
             </a>
         </div>
