--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                 </div>
             </a>
 
-            <a href="https://central.sonatype.com/artifact/org.javers/javers-core/{{site.javers_current_version}}/versions">
+            <a href="https://central.sonatype.com/search?smo=true&namespace=org.javers">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-cloud-download"></span>
