--- a/index.html
+++ b/index.html
@@ -177,18 +177,17 @@ description: With JaVers you can forget about troublesome data versioning. Let t
 
                 <h2>Our supporters</h2>
 
-                <h3><img alt="IntelliJ IDEA" src="/img/IDEADEV.png?timestamp={{ site.time | date: '%s' }}" style="height: 65px"/></h3>
-                We use <a href="https://www.jetbrains.com/idea/">IntelliJ IDEA</a>,
-                the best IDE for Java.
-                JetBrains supports open source community by
-                providing <a href="https://www.jetbrains.com/buy/opensource/">free licence</a> for non-commercial open source projects.
+                Support the JaVers project by becoming a financial contributor and helping us sustain its development.
+                See [Sponsorship](https://javers.org/sponsorship).
 
-                <h3><img alt="YourKit" src="https://www.yourkit.com/images/yklogo.png?timestamp={{ site.time | date: '%s' }}"/></h3>
-                YourKit supports open source projects with its full-featured Java Profiler.
-                YourKit, LLC is the creator of <a href="https://www.yourkit.com/java/profiler/">YourKit Java Profiler</a>
-                , innovative and intelligent tool for profiling Java applications.
+                If your organization is interested in supporting Javers, we can feature your logo here and on the
+                [javers.org](http://javers.org) website.
 
+                <h3> Featured Sponsors</h3>
 
+                <a class="no-focus-style" href="https://github.com/AkrosAG">
+                    <img src="https://javers.org/img/akros_logo.png" width="160px" alt="Akros Logo"/>
+                </a>
 
             </div>
         </div>
