--- a/index.html
+++ b/index.html
@@ -178,10 +178,11 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                 <h2>Our supporters</h2>
 
                 Support the JaVers project by becoming a financial contributor and helping us sustain its development.
-                See [Sponsorship](https://javers.org/sponsorship).
+                See <a href="https://javers.org/sponsorship">Sponsorship</a>.
 
-                If your organization is interested in supporting Javers, we can feature your logo here and on the
-                [javers.org](http://javers.org) website.
+                If your organization is interested in supporting Javers,
+                we can feature your logo here and in the Javers
+                <a href="https://github.com/javers/javers">readme.md</a>.
 
                 <h3> Featured Sponsors</h3>
 
