--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
                 <h2>Contributors</h2>
                     <ul id="github-contributors" class="list-unstyled"></ul>
 
-                <h2>Our supporters</h2>
+                <h2>Our sponsors</h2>
 
                 Support the JaVers project by becoming a financial contributor and helping us sustain its development.
                 See <a href="https://javers.org/sponsorship">Sponsorship</a>.
