--- a/index.html
+++ b/index.html
@@ -170,8 +170,12 @@ description: With JaVers you can forget about troublesome data versioning. Let t
     <div class="container">
         <div class="row">
             <div id="team" class="col-md-8">
-                <h2>Core team</h2>
+                <h2>Javers Core team</h2>
                     <ul id="github-team" class="list-unstyled"></ul>
+
+                <h2>Javers Redis committers</h2>
+                    <ul id="github-javers-redis-team" class="list-unstyled"></ul>
+
                 <h2>Contributors</h2>
                     <ul id="github-contributors" class="list-unstyled"></ul>
 
