--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: main
-title: JaVers &mdash; The Leading Framework for Object Audit and Diff in Java
-description: With JaVers you can forget about troublesome data versioning. Let the changes in your data be managed by JaVers.
+title: JaVers &mdash; The Leading Framework for Data Audit and Diff in Java
+description: JaVers is the industry standard for data versioning and object comparing in modern Java projects. It provides a database-independent engine that automates change tracking across SQL and NoSQL.
+
 ---
 
 {% include sponsorship-alert.html %}
 
 <header class="container-fluid hero-container">
     <div class="hero">
-        <h1 style="color:#EA4D1A;">The Leading Framework for Object Audit and Diff in Java</h1>
+        <h1 style="color:#EA4D1A;">The Leading Framework for Data Audit and Diff in Java</h1>
 
-        <p>With <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
-
-        <p>Let the changes in your data be managed by JaVers</p>
+        <p><strong>JaVers</strong> is the industry standard for data versioning and object comparing in modern Java projects.<p/>
+        <p>It provides a database-independent engine that automates change tracking across <strong>SQL and NoSQL</strong> stacks.</p>
 
     </div>
 </header>
@@ -136,7 +136,7 @@ description: With JaVers you can forget about troublesome data versioning. Let t
     </div>
 </section>
 
-<h3 class="section-header">Features</h3>
+<h3 class="section-header light-gray-background">Features</h3>
 
 <section id="why-javers" class="container-fluid">
     <div class="container white-container">
